<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp" />

    <ImageView
        android:id="@+id/main_tab_background"
        android:scaleType="centerCrop"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <LinearLayout
        android:id="@+id/main_bottom_menu"
        android:layout_width="match_parent"
        android:paddingTop="4dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_height="52dp">

        <FrameLayout
            android:id="@+id/main_bottom_menu_home"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginTop="4.5dp"
                android:id="@+id/main_menu_home_image"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/main_bottom_menu_home_sel"
                android:layout_width="28dp"
                android:layout_height="28dp" />

            <TextView
                android:id="@+id/main_menu_home_text"
                android:text="@string/home"
                android:textColor="@color/main_bottom_menu_text_color"
                android:layout_gravity="center_horizontal|bottom"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/main_bottom_menu_shop"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginTop="4.5dp"
                android:id="@+id/main_menu_shop_image"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/main_bottom_menu_shop_sel"
                android:layout_width="28dp"
                android:layout_height="28dp" />

            <TextView
                android:id="@+id/main_menu_shop_text"
                android:text="@string/shop_title"
                android:textColor="@color/main_bottom_menu_text_color"
                android:layout_gravity="center_horizontal|bottom"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/main_bottom_menu_order"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginTop="4.5dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/main_menu_order_image"
                android:scaleType="fitXY"
                android:src="@drawable/main_bottom_menu_order_sel"
                android:layout_width="28dp"
                android:layout_height="28dp" />

            <TextView
                android:id="@+id/main_menu_order_text"
                android:text="@string/order_title"
                android:textColor="@color/main_bottom_menu_text_color"
                android:layout_gravity="center_horizontal|bottom"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/main_bottom_menu_about_me"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginTop="4.5dp"
                android:id="@+id/main_menu_me_image"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/main_bottom_menu_about_me_sel"
                android:layout_width="28dp"
                android:layout_height="28dp" />

            <TextView
                android:id="@+id/main_menu_me_text"
                android:text="@string/about_me"
                android:textColor="@color/main_bottom_menu_text_color"
                android:layout_gravity="center_horizontal|bottom"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </FrameLayout>

    </LinearLayout>

</FrameLayout>